[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Sprites/n-exit.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/p-exit.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/p-play.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/n-play.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/p-settings.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/n-settings.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/h-exit.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/h-settings.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/h-play.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Scene.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/MainMenuScene.gd" type="Script" id=11]
[ext_resource path="res://Assets/Sprites/menu-background.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/n-itch.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/p-itch.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/h-youtube.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/h-itch.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/p-youtube.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/n-youtube.png" type="Texture" id=18]

[node name="MainMenuScene" instance=ExtResource( 10 )]
rect_pivot_offset = Vector2( -130, -30 )
script = ExtResource( 11 )
next_music = "Menu"

[node name="Background" type="TextureRect" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )

[node name="MarginContainer" type="MarginContainer" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="MarginContainer" index="0"]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 56.0
custom_constants/separation = 8

[node name="Title" type="Label" parent="MarginContainer/VBox" index="0"]
margin_right = 48.0
margin_bottom = 15.0
text = "LOWREZ
FISHER"
align = 1
valign = 1

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox" index="1"]
margin_left = 4.0
margin_top = 23.0
margin_right = 44.0
margin_bottom = 31.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 8

[node name="Options" type="TextureButton" parent="MarginContainer/VBox/HBox" index="0"]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="Play" type="TextureButton" parent="MarginContainer/VBox/HBox" index="1"]
margin_left = 16.0
margin_right = 24.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 3 )
expand = true

[node name="Quit" type="TextureButton" parent="MarginContainer/VBox/HBox" index="2"]
margin_left = 32.0
margin_right = 40.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 2 )
expand = true

[node name="HBox2" type="HBoxContainer" parent="MarginContainer/VBox" index="2"]
margin_left = 12.0
margin_top = 39.0
margin_right = 36.0
margin_bottom = 47.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 8

[node name="Itch" type="TextureButton" parent="MarginContainer/VBox/HBox2" index="0"]
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 16 )
expand = true

[node name="Youtube" type="TextureButton" parent="MarginContainer/VBox/HBox2" index="1"]
margin_left = 16.0
margin_right = 24.0
margin_bottom = 8.0
rect_min_size = Vector2( 8, 8 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 15 )
expand = true

[connection signal="mouse_entered" from="MarginContainer/VBox/HBox/Options" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBox/HBox/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBox/HBox/Play" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBox/HBox/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBox/HBox/Quit" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBox/HBox/Quit" to="." method="_on_Quit_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBox/HBox2/Itch" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBox/HBox2/Itch" to="." method="_on_Itch_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBox/HBox2/Youtube" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBox/HBox2/Youtube" to="." method="_on_Youtube_pressed"]
